# contact-sim

./: .gitignore  pyproject.toml  setup.py
contact-sim/: __init__.py  building.py  course.py  main.py  room.py  student.py
